force-app/main/default/objects/SierraEvent__e/SierraEvent__e.object-meta.xml
<CustomObject>
    <description>Platform Events for Project Sierra Integration</description>
    <label>Sierra Event</label>
    <pluralLabel>Sierra Events</pluralLabel>
</CustomObject>