force-app/main/default/objects/SierraEvent__e/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>The Id value for the Addepar External Id field on the Sobject API Name</description>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>