force-app/main/default/objects/SierraEvent__e/fields/PlatformEvent__c.field-meta.xml
<CustomField>
    <fullName>PlatformEvent__c</fullName>
    <defaultValue>&quot;toastEvent&quot;</defaultValue>
    <description>The enum type for this platform event</description>
    <label>Platform Event</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>